♻️ rename app and change init route and comment api call in main screen
✅ Done

--- a/web/index.html
+++ b/web/index.html
@@ -23,13 +23,13 @@
     <!-- iOS meta tags & icons -->
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
-    <meta content="consultations_app" name="apple-mobile-web-app-title">
+    <meta content="pms_app" name="apple-mobile-web-app-title">
     <link href="icons/Icon-192.png" rel="apple-touch-icon">
 
     <!-- Favicon -->
     <link href="favicon.png" rel="icon" type="image/png">
 
-    <title>consultations_app</title>
+    <title>pms_app</title>
     <link href="manifest.json" rel="manifest">
 
     <script>
